misc updates and fixes

--- a/src/students/components/student_create.html
+++ b/src/students/components/student_create.html
@@ -1,6 +1,5 @@
 <div class="row d-flex justify-content-center small">
-
-  <div class="row w-75">
+  <div id="frmCreate" class="row w-75">
     <div class="col-sm-4 text-center ">
       <div class="text-left d-inline-block">
         <button id="selectPicture" class="btn btn-success btn-sm btn-block my-3 align-left" type="button">Select
@@ -10,7 +9,7 @@
         <button id="savePicture" class="btn btn-success btn-sm btn-block my-3" type="button">Save
           Selection</button>
       </div>
-      <img id="studentPicture" src="src/assets/IMG_2476.JPG" alt="Please select a picutre!" class="border"
+      <img id="studentPicture"  alt="Please select a picutre!" class="border"
         style="height:300px;">
 
       <div class="text-center d-inline-block ">
@@ -88,7 +87,7 @@
     </div>
     <div class=" text-start">
       <div class="d-inline-block" style="margin-bottom: 1px;">
-        <button id="saveButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Save</button>
+        <button id="saveButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Create</button>
         <!-- <button id="createButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Create New</button> -->
         <label id="saveResultsMessage"></label>
       </div>
@@ -97,4 +96,4 @@
     </div>
   </div>
 </div>
-<script src="../scripts/html/student_contact.js"></script>
+<script src="../scripts/html/student_create.js"></script>
