--- a/src/students/components/student_navbar.html
+++ b/src/students/components/student_navbar.html
@@ -2,7 +2,8 @@
       <div class="col-sm-2"></div>
         <div id="navButtonsDiv" class="btn-group ms-2 col-sm-8" role="group">
             <button id="navSearch"     class="btn btn-primary btn-sm my-3 me-1 border rounded" type="button">Search</button>
-            <button id="navContact"    class="btn btn-primary btn-sm my-3 me-1 border rounded" type="button" disabled>Personal</button>
+            <button id="navCreate"     class="btn btn-primary btn-sm my-3 me-1 border rounded" type="button">Create</button>
+            <!-- <button id="navContact"    class="btn btn-primary btn-sm my-3 me-1 border rounded" type="button">Personal</button> -->
             <button id="navAttendance" class="btn btn-primary btn-sm my-3 me-1 border rounded" type="button" disabled>Attendance</button>
             <button id="navClasses"    class="btn btn-primary btn-sm my-3 me-1 border rounded" type="button" disabled>Classes</button>
         </div>
