--- a/src/students/components/student_search.html
+++ b/src/students/components/student_search.html
@@ -1,15 +1,15 @@
-<div class="row" class="d-flex justify-content-center">
+<div class="row d-flex justify-content-center">
   <div class="col-sm-2"></div>
   <div class="col-sm-8">
     <div class="row m-auto">
       <div class="col-sm-3 mb-3" style="width: 11rem;">
-        <input type="text" class="form-control form-control-sm" id="firstName" placeholder="First Name" value="">
+        <input type="text" class="form-control form-control-sm" id="srchFirstName" placeholder="First Name" value="">
       </div>
       <div class="col-sm-3 mb-3" style="width: 11rem;">
-        <input type="text" class="form-control form-control-sm" id="lastName" placeholder="Last Name" value="">
+        <input type="text" class="form-control form-control-sm" id="srchLastName" placeholder="Last Name" value="">
       </div>
       <div class="col-sm-3 mb-3" style="width: 11rem;">
-        <input type="text" class="form-control form-control-sm" id="badgeNumber" placeholder="Badge" value="">
+        <input type="text" class="form-control form-control-sm" id="srchBadgeNumber" placeholder="Badge" value="">
       </div>
       <div class="col-sm-3 mb-3 ">
         <button id="searchButton" class="btn btn-success btn-sm " type="button">Search</button>
