--- a/src/students/components/student_contact.html
+++ b/src/students/components/student_contact.html
@@ -3,16 +3,13 @@
   <div class="row w-75">
     <div class="col-sm-4 text-center ">
       <div class="text-left d-inline-block">
-        <button id="selectPicture" class="btn btn-success btn-sm btn-block my-3 align-left" type="button">Select
-          Picture</button>
+        <button id="selectUpdatePicture" class="btn btn-success btn-sm btn-block my-3 align-left" type="button">Select Picture</button>
       </div>
       <div class="text-right d-inline-block">
-        <button id="savePicture" class="btn btn-success btn-sm btn-block my-3" type="button">Save
-          Selection</button>
+        <button id="saveUpdatePicture" class="btn btn-success btn-sm btn-block my-3" type="button">Save Selection</button>
       </div>
-      <img id="studentPicture" src="src/assets/IMG_2476.JPG" alt="Please select a picutre!" class="border"
-        style="height:300px;">
-
+      <img id="studentUpdatePicture" src="src/assets/IMG_2476.JPG" alt="Please select a picutre!" class="border" style="height:300px;">
+      <span id="imageUpdateName" hidden></span>
       <div class="text-center d-inline-block ">
         <div class="mt-2 p-1 fw-bold border rounded" style="background-color: #D3D3D3; width: 14rem;">
           <label>Status:</label>
@@ -89,7 +86,6 @@
     <div class=" text-start">
       <div class="d-inline-block" style="margin-bottom: 1px;">
         <button id="saveButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Save</button>
-        <!-- <button id="createButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Create New</button> -->
         <label id="saveResultsMessage"></label>
       </div>
     </div>
