--- a/src/students/components/student_create.html
+++ b/src/students/components/student_create.html
@@ -2,14 +2,14 @@
   <div id="frmCreate" class="row w-75">
     <div class="col-sm-4 text-center ">
       <div class="text-left d-inline-block">
-        <button id="selectPicture" class="btn btn-success btn-sm btn-block my-3 align-left" type="button">Select
+        <button id="selectCreatePicture" class="btn btn-success btn-sm btn-block my-3 align-left" type="button">Select
           Picture</button>
       </div>
       <div class="text-right d-inline-block">
-        <button id="savePicture" class="btn btn-success btn-sm btn-block my-3" type="button">Save
+        <button id="saveCreatePicture" class="btn btn-success btn-sm btn-block my-3" type="button">Save
           Selection</button>
       </div>
-      <img id="studentPicture"  alt="Please select a picutre!" class="border"
+      <img id="studentCreatePicture"  alt="Please select a picutre!" class="border"
         style="height:300px;">
 
       <div class="text-center d-inline-block ">
@@ -87,13 +87,13 @@
     </div>
     <div class=" text-start">
       <div class="d-inline-block" style="margin-bottom: 1px;">
-        <button id="saveButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Create</button>
-        <!-- <button id="createButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Create New</button> -->
-        <label id="saveResultsMessage"></label>
+        <button id="createButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Create</button>
+        <label id="createResultsMessage"></label>
       </div>
     </div>
 
     </div>
   </div>
 </div>
-<script src="../scripts/html/student_create.js"></script>
+<script src="../scripts/student_html_create.js"></script>
+
