--- a/src/students/components/student_contact.html
+++ b/src/students/components/student_contact.html
@@ -85,7 +85,8 @@
     </div>
     <div class=" text-start">
       <div class="d-inline-block" style="margin-bottom: 1px;">
-        <button id="saveButton" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Save</button>
+        <button id="saveButton"  class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Save</button>
+        <button id="createBadge" class="btn btn-success btn-sm ml-3" style="margin-bottom: 4px;" type="button">Create Badge</button>
         <label id="saveResultsMessage"></label>
       </div>
     </div>
